--- a/template.yaml
+++ b/template.yaml
@@ -176,6 +176,23 @@ Resources:
         # DestinationArn: !GetAtt AccessLogGroup.Arn
         Format: '{"requestTime":"$context.requestTime","requestId":"$context.requestId","httpMethod":"$context.httpMethod","path":"$context.path","resourcePath":"$context.resourcePath","status":$context.status,"responseLatency":$context.responseLatency}'
 
+  GetGroupGateway:
+    DependsOn: UserPool
+    Type: AWS::Serverless::Api
+    Properties:
+      Name: Get Group API Gateway
+      StageName: Staging
+      Cors:
+        AllowMethods: "'GET,POST,OPTIONS'"
+        AllowHeaders: "'Content-Type,Authorization'"
+        AllowOrigin: "'*'"
+      Auth:
+        Authorizers:
+          CognitoAuthorizer:
+            UserPoolArn: !GetAtt "UserPool.Arn"
+      AccessLogSetting:
+        # DestinationArn: !GetAtt AccessLogGroup.Arn
+        Format: '{"requestTime":"$context.requestTime","requestId":"$context.requestId","httpMethod":"$context.httpMethod","path":"$context.path","resourcePath":"$context.resourcePath","status":$context.status,"responseLatency":$context.responseLatency}'
 
 
   AddGroupGateway:
@@ -279,6 +296,32 @@ Resources:
           Properties:
             RestApiId: !Ref GetGroupsGateway
             Path: /get-groups
+            Method: GET
+            Auth:
+              Authorizer: CognitoAuthorizer
+
+  GetGroupFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: ./src/GetGroup/
+      Handler: GetGroup::GetGroup.Function::FunctionHandler
+      Runtime: dotnet8
+      Architectures:
+      - x86_64
+      Role: null
+      Policies:
+        - Statement:
+          - Sid: DynamoDBFullAccess
+            Effect: Allow
+            Action:
+            - dynamodb:*
+            Resource: '*'
+      Events:
+        GetGroupsApi:
+          Type: Api
+          Properties:
+            RestApiId: !Ref GetGroupGateway
+            Path: /get-group
             Method: GET
             Auth:
               Authorizer: CognitoAuthorizer
